--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "sequelize": "^6.27.0",
     "typescript": "^4.9.4"
@@ -15,6 +16,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
+    "@types/express-fileupload": "^1.4.1",
     "tslint": "^6.1.3"
   },
   "scripts": {
