añadiendo funcionalidad de s3 para guardar en la base de datos la direccion de la imagen

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 PORT=8000
 NAME_DATABASE=pruebamili
 USER_DATABASE=root
-AWS_REGION=FWFFF
-AWS_ACCESS_KEY=FWFWRF
-AWS_SECRET_KEY=FSFGWSF
+AWS_ACCESS_KEY=AKIAYOOQNH4RN2NZVFK2
+AWS_SECRET_KEY=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
