--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "filereader": "^0.10.3",
     "fs": "^0.0.1-security",
     "mysql2": "^2.3.3",
     "sequelize": "^6.27.0",
